fixed schedule candidate overflow bug

--- a/src/app.scss
+++ b/src/app.scss
@@ -8,3 +8,6 @@
   background-color: #3970FF36;
   background-color: #3971ff24;
 }
+.app{
+  overflow-y: hidden;
+}
