--- a/src/pages/scheduleCandidate/scheduleCandidate.scss
+++ b/src/pages/scheduleCandidate/scheduleCandidate.scss
@@ -1,15 +1,18 @@
 .scheduleCandidateWrapper {
   width: 100%;
   display: flex;
-  height: calc(100% - 0px);
+  height: calc(100vh - 0px);
+
 
   .scheduleCandidateRight {
+    overflow-y: auto !important;
     flex: 5;
+    height: 100%;
 
     .scheduleCandidateMainWrapper {
       height: 100%;
       padding: 10px 64px;
-      overflow-y: auto;
+      
 
       .scheduleCandidateFormWrapper {
         height: 95%;
